feature: Make SubMode a type
- A new Type SumMode is added to the OTP internal model
- Trip, Route and Stop have a submode, now requiered
- Default SubMode is UNKNOWN
- SubMode filters performance is optimized, using EnumSet if there are many main-mode and BitSet
  if there are many sub-modes for a given main-mode.
- A special filter is created for the case where all main-modes are included